--- a/templates/page.html
+++ b/templates/page.html
@@ -30,3 +30,19 @@ Table of contents
 
 {{ page.content | safe }}
 {% endblock content %}
+
+{% block footer %}
+<p class="taxonomies">
+{% if page.taxonomies.tags %}
+{% for tag in page.taxonomies.tags %}
+<a href="/tags/{{ tag | slugify }}">#{{ tag }}</a>
+{% endfor %}
+{% for category in page.taxonomies.categories %}
+<a href="/categories/{{ category | slugify }}">+{{ category }}</a>
+{% endfor %}
+{% for context in page.taxonomies.contexts %}
+<a href="/contexts/{{ context | slugify }}">@{{ context }}</a>
+{% endfor %}
+{% endif %}
+</p>
+{% endblock footer %}
