--- a/templates/categories/list.html
+++ b/templates/categories/list.html
@@ -9,7 +9,7 @@
 <ul>
 {% for term in terms %}
     <li>
-        <a href="{{ term.permalink | safe }}">{{ term.name }}</a>
+        <a href="{{ term.permalink | safe }}">{{ term.name }}</a> [{{ term.pages | length }}]
     </li>
 {% endfor %}
 </ul>
