templates/page: make categories and contexts optional

--- a/templates/page.html
+++ b/templates/page.html
@@ -37,12 +37,16 @@ Table of contents
 {% for tag in page.taxonomies.tags %}
 <a href="/tags/{{ tag | slugify }}">#{{ tag }}</a>
 {% endfor %}
+{% if page.taxonomies.categories %}
 {% for category in page.taxonomies.categories %}
 <a href="/categories/{{ category | slugify }}">+{{ category }}</a>
 {% endfor %}
+{% endif %}
+{% if page.taxonomies.contexts %}
 {% for context in page.taxonomies.contexts %}
 <a href="/contexts/{{ context | slugify }}">@{{ context }}</a>
 {% endfor %}
+{% endif %}
 {% endif %}
 </p>
 {% endblock footer %}
