templates/base: support opening nav items in new tab

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
                 {% if config.extra.header_nav %}
                 <nav>
                     {% for nav_item in config.extra.header_nav %}
-                    <a href="{{ nav_item.url | safe }}">{{ nav_item.name }}</a>
+                    <a href="{{ nav_item.url | safe }}" {% if nav_item.new_tab %}target="_blank" rel="noreferrer noopener"{% endif %}>{{ nav_item.name }}</a>
                     {% endfor %}
                 </nav>
                 {% endif %}
