--- a/templates/tags/single.html
+++ b/templates/tags/single.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-<p><a href="{{ current_path }}">..</a>/{{ term.slug }}/</p>
+<p><a href="{{ current_path }}..">..</a>/{{ term.slug }}/</p>
 <h1>{{ term.name }}</h1>
 {% endblock header %}
 
