Fix: Sort pages by date for both paginated and non-paginated views
Updated the index.html template to ensure that both paginated and non-paginated pages are sorted by date in descending order (newest first). This change improves the user experience by displaying the most recent content at the top of the list, enhancing navigation and content discovery.

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 
 {% if config.extra.list_pages %}
 {% if paginator %}
-{% set pages = paginator.pages %}
+{% set pages = paginator.pages | sort(attribute="date") | reverse %}
 {% else %}
-{% set pages = section.pages %}
+{% set pages = section.pages | sort(attribute="date") | reverse %}
 {% endif %}
 <ul>
 {% for page in pages %}
